--- a/nasa-app/public/index.html
+++ b/nasa-app/public/index.html
@@ -7,8 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Discover the latest news, images, and videos from NASA with What's NASA Cooking?"
     />
+    <meta property="og:title" content="What's NASA Cooking?" />
+    <meta property="og:description" content="Discover the latest news, images, and videos from NASA." />
+    <meta property="og:image" href="../src/assets/nasa-unsplash.jpg"/>
+    <meta property="og:url" content="https://whats-nasa-cooking.vercel.app/" />
+    <meta property="og:type" content="website" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700&display=swap" />
